ProcesseurXML/xsd.output
Grammaire

    0 $accept: main $end

    1 main: document

    2 document: prolog schema comments

    3 schema: INF SCHEMA attributes SUP elements INF SLASH SCHEMA SUP
    4       | INF SCHEMA attributes SLASH SUP

    5 elements: elements element
    6         | element

    7 element: complexElement
    8        | simpleElement

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP

   10 simpleElement: INF ELEMENT nom attributes SLASH SUP

   11 complexType: choice
   12            | sequence

   13 choice: INF CHOICE SUP elements INF SLASH CHOICE SUP

   14 sequence: INF SEQUENCE SUP elements INF SLASH SEQUENCE SUP

   15 attributes: attributes attribute
   16           | /* vide */

   17 attribute: NOM EGAL VALEUR

   18 nom: NAME EGAL VALEUR
   19    | REF EGAL VALEUR

   20 prolog: doctypedecl comments
   21       | comments

   22 doctypedecl: INFSPECIAL NOM attribute attribute SUPSPECIAL

   23 comments: comments COMMENT
   24         | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EGAL (258) 17 18 19
SLASH (259) 3 4 9 10 13 14
SUP (260) 3 4 9 10 13 14
SUPSPECIAL (261) 22
INFSPECIAL (262) 22
INF (263) 3 4 9 10 13 14
SCHEMA (264) 3 4
ELEMENT (265) 9 10
COMPLEXTYPE (266) 9
CHOICE (267) 13
SEQUENCE (268) 14
NAME (269) 18
REF (270) 19
VALEUR (271) 17 18 19
COMMENT (272) 23
NOM (273) 17 22


Non-terminaux, suivis des règles où ils apparaissent

$accept (19)
    à gauche: 0
main (20)
    à gauche: 1, à droite: 0
document (21)
    à gauche: 2, à droite: 1
schema (22)
    à gauche: 3 4, à droite: 2
elements (23)
    à gauche: 5 6, à droite: 3 5 13 14
element (24)
    à gauche: 7 8, à droite: 5 6
complexElement (25)
    à gauche: 9, à droite: 7
simpleElement (26)
    à gauche: 10, à droite: 8
complexType (27)
    à gauche: 11 12, à droite: 9
choice (28)
    à gauche: 13, à droite: 11
sequence (29)
    à gauche: 14, à droite: 12
attributes (30)
    à gauche: 15 16, à droite: 3 4 9 10 15
attribute (31)
    à gauche: 17, à droite: 15 22
nom (32)
    à gauche: 18 19, à droite: 9 10
prolog (33)
    à gauche: 20 21, à droite: 2
doctypedecl (34)
    à gauche: 22, à droite: 20
comments (35)
    à gauche: 23 24, à droite: 2 20 21 23


état 0

    0 $accept: . main $end

    INFSPECIAL  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 24 (comments)

    main         aller à l'état 2
    document     aller à l'état 3
    prolog       aller à l'état 4
    doctypedecl  aller à l'état 5
    comments     aller à l'état 6


état 1

   22 doctypedecl: INFSPECIAL . NOM attribute attribute SUPSPECIAL

    NOM  décalage et aller à l'état 7


état 2

    0 $accept: main . $end

    $end  décalage et aller à l'état 8


état 3

    1 main: document .

    $défaut  réduction par utilisation de la règle 1 (main)


état 4

    2 document: prolog . schema comments

    INF  décalage et aller à l'état 9

    schema  aller à l'état 10


état 5

   20 prolog: doctypedecl . comments

    $défaut  réduction par utilisation de la règle 24 (comments)

    comments  aller à l'état 11


état 6

   21 prolog: comments .
   23 comments: comments . COMMENT

    COMMENT  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 21 (prolog)


état 7

   22 doctypedecl: INFSPECIAL NOM . attribute attribute SUPSPECIAL

    NOM  décalage et aller à l'état 13

    attribute  aller à l'état 14


état 8

    0 $accept: main $end .

    $défaut  accepter


état 9

    3 schema: INF . SCHEMA attributes SUP elements INF SLASH SCHEMA SUP
    4       | INF . SCHEMA attributes SLASH SUP

    SCHEMA  décalage et aller à l'état 15


état 10

    2 document: prolog schema . comments

    $défaut  réduction par utilisation de la règle 24 (comments)

    comments  aller à l'état 16


état 11

   20 prolog: doctypedecl comments .
   23 comments: comments . COMMENT

    COMMENT  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 20 (prolog)


état 12

   23 comments: comments COMMENT .

    $défaut  réduction par utilisation de la règle 23 (comments)


état 13

   17 attribute: NOM . EGAL VALEUR

    EGAL  décalage et aller à l'état 17


état 14

   22 doctypedecl: INFSPECIAL NOM attribute . attribute SUPSPECIAL

    NOM  décalage et aller à l'état 13

    attribute  aller à l'état 18


état 15

    3 schema: INF SCHEMA . attributes SUP elements INF SLASH SCHEMA SUP
    4       | INF SCHEMA . attributes SLASH SUP

    $défaut  réduction par utilisation de la règle 16 (attributes)

    attributes  aller à l'état 19


état 16

    2 document: prolog schema comments .
   23 comments: comments . COMMENT

    COMMENT  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 2 (document)


état 17

   17 attribute: NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 20


état 18

   22 doctypedecl: INFSPECIAL NOM attribute attribute . SUPSPECIAL

    SUPSPECIAL  décalage et aller à l'état 21


état 19

    3 schema: INF SCHEMA attributes . SUP elements INF SLASH SCHEMA SUP
    4       | INF SCHEMA attributes . SLASH SUP
   15 attributes: attributes . attribute

    SLASH  décalage et aller à l'état 22
    SUP    décalage et aller à l'état 23
    NOM    décalage et aller à l'état 13

    attribute  aller à l'état 24


état 20

   17 attribute: NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 17 (attribute)


état 21

   22 doctypedecl: INFSPECIAL NOM attribute attribute SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 22 (doctypedecl)


état 22

    4 schema: INF SCHEMA attributes SLASH . SUP

    SUP  décalage et aller à l'état 25


état 23

    3 schema: INF SCHEMA attributes SUP . elements INF SLASH SCHEMA SUP

    INF  décalage et aller à l'état 26

    elements        aller à l'état 27
    element         aller à l'état 28
    complexElement  aller à l'état 29
    simpleElement   aller à l'état 30


état 24

   15 attributes: attributes attribute .

    $défaut  réduction par utilisation de la règle 15 (attributes)


état 25

    4 schema: INF SCHEMA attributes SLASH SUP .

    $défaut  réduction par utilisation de la règle 4 (schema)


état 26

    9 complexElement: INF . ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP
   10 simpleElement: INF . ELEMENT nom attributes SLASH SUP

    ELEMENT  décalage et aller à l'état 31


état 27

    3 schema: INF SCHEMA attributes SUP elements . INF SLASH SCHEMA SUP
    5 elements: elements . element

    INF  décalage et aller à l'état 32

    element         aller à l'état 33
    complexElement  aller à l'état 29
    simpleElement   aller à l'état 30


état 28

    6 elements: element .

    $défaut  réduction par utilisation de la règle 6 (elements)


état 29

    7 element: complexElement .

    $défaut  réduction par utilisation de la règle 7 (element)


état 30

    8 element: simpleElement .

    $défaut  réduction par utilisation de la règle 8 (element)


état 31

    9 complexElement: INF ELEMENT . nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP
   10 simpleElement: INF ELEMENT . nom attributes SLASH SUP

    NAME  décalage et aller à l'état 34
    REF   décalage et aller à l'état 35

    nom  aller à l'état 36


état 32

    3 schema: INF SCHEMA attributes SUP elements INF . SLASH SCHEMA SUP
    9 complexElement: INF . ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP
   10 simpleElement: INF . ELEMENT nom attributes SLASH SUP

    SLASH    décalage et aller à l'état 37
    ELEMENT  décalage et aller à l'état 31


état 33

    5 elements: elements element .

    $défaut  réduction par utilisation de la règle 5 (elements)


état 34

   18 nom: NAME . EGAL VALEUR

    EGAL  décalage et aller à l'état 38


état 35

   19 nom: REF . EGAL VALEUR

    EGAL  décalage et aller à l'état 39


état 36

    9 complexElement: INF ELEMENT nom . attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP
   10 simpleElement: INF ELEMENT nom . attributes SLASH SUP

    $défaut  réduction par utilisation de la règle 16 (attributes)

    attributes  aller à l'état 40


état 37

    3 schema: INF SCHEMA attributes SUP elements INF SLASH . SCHEMA SUP

    SCHEMA  décalage et aller à l'état 41


état 38

   18 nom: NAME EGAL . VALEUR

    VALEUR  décalage et aller à l'état 42


état 39

   19 nom: REF EGAL . VALEUR

    VALEUR  décalage et aller à l'état 43


état 40

    9 complexElement: INF ELEMENT nom attributes . SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP
   10 simpleElement: INF ELEMENT nom attributes . SLASH SUP
   15 attributes: attributes . attribute

    SLASH  décalage et aller à l'état 44
    SUP    décalage et aller à l'état 45
    NOM    décalage et aller à l'état 13

    attribute  aller à l'état 24


état 41

    3 schema: INF SCHEMA attributes SUP elements INF SLASH SCHEMA . SUP

    SUP  décalage et aller à l'état 46


état 42

   18 nom: NAME EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 18 (nom)


état 43

   19 nom: REF EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 19 (nom)


état 44

   10 simpleElement: INF ELEMENT nom attributes SLASH . SUP

    SUP  décalage et aller à l'état 47


état 45

    9 complexElement: INF ELEMENT nom attributes SUP . INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP

    INF  décalage et aller à l'état 48


état 46

    3 schema: INF SCHEMA attributes SUP elements INF SLASH SCHEMA SUP .

    $défaut  réduction par utilisation de la règle 3 (schema)


état 47

   10 simpleElement: INF ELEMENT nom attributes SLASH SUP .

    $défaut  réduction par utilisation de la règle 10 (simpleElement)


état 48

    9 complexElement: INF ELEMENT nom attributes SUP INF . COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP

    COMPLEXTYPE  décalage et aller à l'état 49


état 49

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE . SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP

    SUP  décalage et aller à l'état 50


état 50

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP . complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP

    INF  décalage et aller à l'état 51

    complexType  aller à l'état 52
    choice       aller à l'état 53
    sequence     aller à l'état 54


état 51

   13 choice: INF . CHOICE SUP elements INF SLASH CHOICE SUP
   14 sequence: INF . SEQUENCE SUP elements INF SLASH SEQUENCE SUP

    CHOICE    décalage et aller à l'état 55
    SEQUENCE  décalage et aller à l'état 56


état 52

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType . INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP

    INF  décalage et aller à l'état 57


état 53

   11 complexType: choice .

    $défaut  réduction par utilisation de la règle 11 (complexType)


état 54

   12 complexType: sequence .

    $défaut  réduction par utilisation de la règle 12 (complexType)


état 55

   13 choice: INF CHOICE . SUP elements INF SLASH CHOICE SUP

    SUP  décalage et aller à l'état 58


état 56

   14 sequence: INF SEQUENCE . SUP elements INF SLASH SEQUENCE SUP

    SUP  décalage et aller à l'état 59


état 57

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF . SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP

    SLASH  décalage et aller à l'état 60


état 58

   13 choice: INF CHOICE SUP . elements INF SLASH CHOICE SUP

    INF  décalage et aller à l'état 26

    elements        aller à l'état 61
    element         aller à l'état 28
    complexElement  aller à l'état 29
    simpleElement   aller à l'état 30


état 59

   14 sequence: INF SEQUENCE SUP . elements INF SLASH SEQUENCE SUP

    INF  décalage et aller à l'état 26

    elements        aller à l'état 62
    element         aller à l'état 28
    complexElement  aller à l'état 29
    simpleElement   aller à l'état 30


état 60

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH . COMPLEXTYPE SUP INF SLASH ELEMENT SUP

    COMPLEXTYPE  décalage et aller à l'état 63


état 61

    5 elements: elements . element
   13 choice: INF CHOICE SUP elements . INF SLASH CHOICE SUP

    INF  décalage et aller à l'état 64

    element         aller à l'état 33
    complexElement  aller à l'état 29
    simpleElement   aller à l'état 30


état 62

    5 elements: elements . element
   14 sequence: INF SEQUENCE SUP elements . INF SLASH SEQUENCE SUP

    INF  décalage et aller à l'état 65

    element         aller à l'état 33
    complexElement  aller à l'état 29
    simpleElement   aller à l'état 30


état 63

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE . SUP INF SLASH ELEMENT SUP

    SUP  décalage et aller à l'état 66


état 64

    9 complexElement: INF . ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP
   10 simpleElement: INF . ELEMENT nom attributes SLASH SUP
   13 choice: INF CHOICE SUP elements INF . SLASH CHOICE SUP

    SLASH    décalage et aller à l'état 67
    ELEMENT  décalage et aller à l'état 31


état 65

    9 complexElement: INF . ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP
   10 simpleElement: INF . ELEMENT nom attributes SLASH SUP
   14 sequence: INF SEQUENCE SUP elements INF . SLASH SEQUENCE SUP

    SLASH    décalage et aller à l'état 68
    ELEMENT  décalage et aller à l'état 31


état 66

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP . INF SLASH ELEMENT SUP

    INF  décalage et aller à l'état 69


état 67

   13 choice: INF CHOICE SUP elements INF SLASH . CHOICE SUP

    CHOICE  décalage et aller à l'état 70


état 68

   14 sequence: INF SEQUENCE SUP elements INF SLASH . SEQUENCE SUP

    SEQUENCE  décalage et aller à l'état 71


état 69

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF . SLASH ELEMENT SUP

    SLASH  décalage et aller à l'état 72


état 70

   13 choice: INF CHOICE SUP elements INF SLASH CHOICE . SUP

    SUP  décalage et aller à l'état 73


état 71

   14 sequence: INF SEQUENCE SUP elements INF SLASH SEQUENCE . SUP

    SUP  décalage et aller à l'état 74


état 72

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH . ELEMENT SUP

    ELEMENT  décalage et aller à l'état 75


état 73

   13 choice: INF CHOICE SUP elements INF SLASH CHOICE SUP .

    $défaut  réduction par utilisation de la règle 13 (choice)


état 74

   14 sequence: INF SEQUENCE SUP elements INF SLASH SEQUENCE SUP .

    $défaut  réduction par utilisation de la règle 14 (sequence)


état 75

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT . SUP

    SUP  décalage et aller à l'état 76


état 76

    9 complexElement: INF ELEMENT nom attributes SUP INF COMPLEXTYPE SUP complexType INF SLASH COMPLEXTYPE SUP INF SLASH ELEMENT SUP .

    $défaut  réduction par utilisation de la règle 9 (complexElement)
